--- a/Nedersaksische_begroetingsvörms.mw
+++ b/Nedersaksische_begroetingsvörms.mw
@@ -1,4 +1,4 @@
-In 't Nedersaksisch taalgebied (Noordoost-Nederlaand en Noord-Duutslaand) gebruukt ze verskeiden Nedersaksische begroetingsvörms, naost de vörms die niet specifiek uut dit gebied koomt. Sommige groeten bint buten 't gebied oaver-eneumen.
+bliekboar kan iederien disse syte bewarkn dus doe k da ook moar ffties....joow he!👍
 
 ==Moi==
 '''Moi''' (plaatselijk: '''moin'''; IPA-uutspraok: ''mɒj'', ''mɒjn'') is in [[Oaveriessel]], [[Grunnen (provìnzie)|Grunning]], [[Drenthe]], [[Tweante|Twente]] en de [[Achterhook|Achterhoek]] een groet veur zowel ankomst as ofskeid en veur elk moment van de dag. In Twente en Grunning zegt ze noast ''moi'' ok wal ''moin''. In [[Stellingwarf]], de [[Kop van Oaveriessel]], [[Sallaand]], op de [[Veluwe]] en op [[Urk]] wördt dizze groet niet of nauwelijks gebruukt. In Grunning giet dizze groet vaok saomen mit t opsteken van de wiesvinger mit de doeme richting t eigen gezicht.
