Wiezigingen deur [[Special:Contributions/213.125.29.82|213.125.29.82]] hersteld tot de versie nao de leste wieziging deur [[User:Woolters|Woolters]]

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -1,4 +1,11 @@
-moi👍
+[[Bestaand:Wikipedia-logo-v2.svg|right|200px|t Beelmärk van Wikipedia]]
+'''Wikipedia''' is een projekt van de [[Wikimedia Foundation|Wikimedia-stichting]], die as doel ef um in elke taal een volledige en rechtenvri'je [[encyklopedie]] op et internet te maken. Naost typiese encyklopedie-artikels he'j op Wikipedia ok informasie die vake in verband ebracht wordt mit [[almanak]]ken, specialistiese tiedskriften en zaken die in et ni'js bint. De artikels op de wiki's worden eskreven deur verskillende vri'jwillige auteurs. De naam ''Wikipedia'' is een samentrekking van ''wiki'' ([[Hawaïaans|Awaïaans]] veur ''vlogge'') en et Engelse ''encyclo'''pedia'''''.
+
+Onder de [[parreplu]] van de Wikimedia-stichting bint verskillende projekten, waorvan Wikipedia et oldste, bekendste en suksesvolste projekt is. De organisasie Wikipedia zit in [[Florida]], [[Verienigde Staoten van Amerika|Amerika]] en ef gien winstoogmärk. Wikipedia is esticht deur [[Jimmy Wales]] en zien medeoprichter [[Larry Sanger]]. In [[2003]] draagden Wales zien rechten op de naam Wikipedia, de webstee zelf en de servers waorop ze dreiden, over an de Wikimedia-stichting. Disse stichting ef Wales op-ericht um veur een lange tied et be-old en de värdere ontwikkeling van Wikipedia meugelik te maken. De stichting leaft zowat alleend mär van giften en ef een kleine onderd betaolde medewärkers in dienst. Mär Wikipedia zelf wordt deur vri'jwilligers beheerd en eskreven.
+
+Umdät de artikels deur elke bezuker bewärkt kunnen worden, gef Wikipedia gien garansie dät de artikels ok daodwärkelik goed eskreven bint. Vandalisme is vake een probleem, veural bi'j de wat grotere Wikipedia's.
+
+Et Wikipedia-projekt is begunnen op [[15 jannewaori]] [[2001]], mär bestun toe alleend nog mär in et [[Engels]]. De eerste anderstalige versie was in et [[Frans]], en begun op [[23 meert]] [[2001]]. De [[Nedersaksiese Wikipedia|Nedersaksiese versie van Wikipedia]] is begunnen op [[23 meert]] [[2006]] en ef noe {{NUMBEROFARTICLES}} artikels. Et internetadres van de Nedersaksiese Wikipedia is http://nds-nl.wikipedia.org/. De [[Engels]]e versie is et grootst en ef roem 3.500.000 artikels. In totaal waren der in [[15 jannewaori]] [[2011]] meer as 17 miljoen artikels te vinden op iel Wikipedia in 278 verskillende talen en streektalen. 
 
 == Zie ok ==
 * [[Nedersaksiese Wikipedia]]
