*Empty MediaWiki Message*

--- a/Goten.mw
+++ b/Goten.mw
@@ -16,4 +16,4 @@ Tiene jaor laeter waren de plunderingen grootskeepser ewörren. In [[249]] wödd
 
 {{Dialekt|sdz}}
 
-[[Kategorie: Sallaans artikel]]
+[[Kategorie:Sallaands artikel]]
