*Empty MediaWiki Message*

--- a/Oostkolonisatie.mw
+++ b/Oostkolonisatie.mw
@@ -8,5 +8,5 @@ De Slavische stammen die ten oosten van 't Heilige Roomse Riek leafden waren veu
 
 {{Dialekt|sdz}}
 
-[[Kategorie: Sallaans artikel]]
-[[Kategorie: Geschiedenis]]
+[[Kategorie:Sallaands artikel]]
+[[Kategorie:Geschiedenis]]
