*Empty MediaWiki Message*

--- a/Grunny.mw
+++ b/Grunny.mw
@@ -1,4 +1,5 @@
 De '''Grunny''' is n meziekpries van RTV Noord, dij joarlieks oetlangd wordt aan n artiest of band dij zok verdainstelk moakt het veur de Grunneger meziek. Dizze pries is in 2010 in t leven roupen deur Eric Bats, prezentoator van t pergram Café Martini op Radio Noord.
+
 == Winnoars ==
 *2010 Erwin de Vries, zanger
 *2011 Lianne Abeln, zangeres
@@ -12,4 +13,4 @@ De '''Grunny''' is n meziekpries van RTV Noord, dij joarlieks oetlangd wordt aan
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Kulturele priezen]]
-[[Kategorie:Meziek]]
+[[Kategorie:Muziek]]
