*Empty MediaWiki Message*

--- a/AKI_Artez.mw
+++ b/AKI_Artez.mw
@@ -17,4 +17,4 @@ Vakken wat der noch meyr an-eböäden wördet bint under ander: [[Kunstgeschiede
 [[Kategorie:Skilderkeunst]]
 [[Kategorie:Keunst]]
 [[Kategorie:Bieldend keunstenaor]]
-[[Kategorie:Schoele]]
+[[Kategorie:Onderwies]]
