--- a/Amsterdam.mw
+++ b/Amsterdam.mw
@@ -16,12 +16,12 @@
 | verkeersaoder = [[A1]], [[A2]], [[A4]], [[A5]], [[A6]], [[A7]], [[A8]], [[A9]], [[A10]], [[E19]], [[E22]], [[E35]], [[E231]]
 | netnummer = 020
 | postcode = 1000-1109
-| webstee = http://www.amsterdam.nl
+| webstee = http://www.amsterdam.nl/
 | ofbeelding2 = Amsterdam 4.89943E 52.37109N.jpg
 | umskrieving2 = Satellietfoto van de stad Amsterdam
 }}
 [[Bestaand:Karte Amsterdam MKL1888.png|thumb|270px|Amsterdam in [[1888]].]]
-'''Amsterdam''' (in t [[Urkers]] ok wel ''De Stad'' eneumd) is n [[gemiente (bestuur)|gemiente]] in is de [[heufdstad|oofdstad]] van [[Nederlaand]]. De stad wort in t [[Amsterdams]] ok wel ''Mokum'' eneumd, disse naam komt eut t [[Jiddisj]] in betaekent 'plekke' of '[[Stad (woonstee)|stad]]'. Amsterdam legt in de [[Nederlaand]]se [[pervincie|provinsie]] [[Noord-Hollaand|Noord-Ollaand]] an de monding van de [[Amstel]], in t [[IJ]]. 
+'''Amsterdam''' (in t [[Urkers]] ok wel ''De Stad'' eneumd) is n [[gemiente (bestuur)|gemiente]] in is de [[heufdstad|oofdstad]] van [[Nederlaand]]. De stad wort in t [[Amsterdams]] ok wel ''Mokum'' eneumd, disse naam komt eut t [[Jiddisj]] in betaekent 'plekke' of '[[Stad (woonstee)|stad]]'. Amsterdam legt in de [[Nederlaand]]se [[pervincie|provinsie]] [[Noord-Hollaand|Noord-Ollaand]] an de monding van de [[Amstel]], in t [[IJ (rivier)|IJ]]. 
 
 Amsterdam et zeen naam te danken an de anlegging van n dam in de [[13e eeuw|13e ieuw]] an de Amstel (''Amsteldam''). Roend [[1300]] krieg t [[stadsrechten]], in gruuide in de [[Gouwen Ieuw]] eut tot ien van de belangrikste angelssteden ter wärreld. Bevolkingsgruui leidde vanof t aende van de [[16e eeuw|16e ieuw]] tot stadseutbreidingen, waoronger de [[grachtengordel]], die op de [[UNESCO]]-[[Wärreldörfgoedliest]] stot in tot dé bezienswaardigeden van de stad beoort. Angere attraksies binnen museums, zo as t [[Rieksmuseum Amsterdam|Riksmuseum]], t [[Stedelik Museum (Amsterdam)|Stedelik Museum]] in t [[Van Gogh Museum]], t [[Anne Frank Eus]], [[de Wallen]] in de [[dreugkafee|droogkafees]]. Amsterdam et twie [[universiteit]]en in et de mieste nasionaoliteiten ter wärreld.<ref>[http://www.trouw.nl/nieuws/nederland/article1670842.ece Amsterdam stad met meeste nationaliteiten (177) ter wereld], Trouw, 22 augustus 2007</ref><ref>[http://amsterdam.nl/nieuws/@340049/inwoneraantal/ Inwoneraantal Amsterdam blijft groeien stad telt 178 nationaliteiten; één meer dan in 2009], Gemeente Amsterdam, 29 juni 2010</ref>
 
