--- a/Fats_Domino.mw
+++ b/Fats_Domino.mw
@@ -1,23 +1,23 @@
 [[Bestaand:Fats Domino (1962).jpg|duum|Fats Domino in 1962]]
-'''Fats Domino''' (New Orleans, 26 februari 1928 – Harvey, 24 oktober 2017), was n Amerikoanse rhythm-and-blueszanger en pianist. Hai was ain van de pioniers in de ''rock and roll'' en in de joaren 1950 en '60 de bestverkopende Afro-Amerikoanse muzikant. 
+'''Fats Domino''' ([[New Orleans]], 26 februari 1928 – [[Harvey]], 24 oktober 2017), was n [[Verienigde Staoten van Amerika|Amerikoans]]e [[rhythm-and-blues]]<nowiki/>zanger en pianist. Hai was ain van de pioniers in de ''rock and roll'' en in de joaren 1950 en '60 de bestverkopende [[Afro-Amerikoans]]e muzikant. 
 
 == Leven ==
-Fats Domino is geboren en opgruid as Antoine Dominique Domino Jr. in New Orleans, Louisiana. Hai was de jongste van aacht kinder oet t gezin van Antoine Caliste Domino (1879–1964) en Marie-Donatille Gros (1886–1971). De femilie Domino was van Fraans-creoolse òfkomst en heur moudertoal was Louisiana-creools. Voader Domino was vioulspeulder.
+Fats Domino is geboren en opgruid as Antoine Dominique Domino Jr. in New Orleans, Louisiana. Hai was de jongste van aacht kinder oet t gezin van [[Antoine Caliste Domino]] (1879–1964) en [[Marie-Donatille Gros]] (1886–1971). De femilie Domino was van [[Frankriek|Fraans]]-[[creools]]e òfkomst en heur moudertoal was [[Louisiana-creools]]. Voader Domino was vioulspeulder.
 
-Antoine Dominique was traauwd mit Rosemary van 1947 tot heur overlieden in 2008. Zai haren aacht kinder. Hai bleef mit zien gezin wonen in zien olle buurt Lower Ninth Ward, tot noa orkoan Katrina in 2005. Dou was Fats even vermist, tot zien dochter hom herkìnde op foto's van geëvacueerden. Bie de ramp roakte hai zien golden ploaten kwiet. Van de ploatenmoatschoppij kreeg hai hierveur reproduksies weer. Noa Katrina verhoesde hai noar n boetenwiek van New Orleans.
+Antoine Dominique was traauwd mit Rosemary van 1947 tot heur overlieden in 2008. Zai haren aacht kinder. Hai bleef mit zien gezin wonen in zien olle buurt Lower Ninth Ward, tot noa [[orkoan Katrina]] in 2005. Dou was Fats even vermist, tot zien dochter hom herkìnde op foto's van geëvacueerden. Bie de ramp roakte hai zien golden ploaten kwiet. Van de ploatenmoatschoppij kreeg hai hierveur reproduksies weer. Noa Katrina verhoesde hai noar n boetenwiek van New Orleans.
 
 Op 24 oktober 2017 is Domino op 89-joarege leeftied oet tied kommen.
 
 == Loopboan ==
 
 === Aanbegun ===
-Om en bie 1938 leerde Antoine pioanospeulen van zien zwoager, jazzgitoarist Harrison Verrett. Dou hai vattien joar was, speulde hai al in bars in New Orleans.
+Om en bie 1938 leerde Antoine pioanospeulen van zien zwoager, jazzgitoarist [[Harrison Verrett]]. Dou hai vattien joar was, speulde hai al in bars in New Orleans.
 
 === Vrouge joaren (1947-'48) ===
-In 1947 wer Billy Diamond, n bandlaaider oet New Orleans, vroagd om de jonge pianist te zain optreden bie n buurtbarbecue. Diamond von hom zo goud speulen dat e hom vroagd het om bie de band ''The Solid Senders'' te kommen, woar Domino $3 per week verdainde mit pioanospeulen. Diamond gaf hom de bienoam ''Fats'', omreden Domino hom herinnern dee aan de vernuimde pianisten Fats Waller en Fats Pichon, mor ook om zien dikke eetlust.
+In 1947 wer [[Billy Diamond]], n bandlaaider oet New Orleans, vroagd om de jonge pianist te zain optreden bie n buurtbarbecue. Diamond von hom zo goud speulen dat e hom vroagd het om bie de band ''[[The Solid Senders]]'' te kommen, woar Domino $3 per week verdainde mit pioanospeulen. Diamond gaf hom de bienoam ''Fats'', omreden Domino hom herinnern dee aan de vernuimde pianisten [[Fats Waller]] en [[Fats Pichon]], mor ook om zien dikke eetlust.
 
 === Imperial Records (1949–'62) ===
-Domino kreeg in 1949 n kontrakt bie Imperial Records. Hai kreeg royalties betoald op boases van verkopen in stee van n honoroarium veur elk laid. Mit producer Dave Bartholomew schreef hai ''The Fat Man'', n òfgezwakte versie van n laid over drugsversloafden, de ''Junkers Blues''; van dizze ploats wazzen in 1951 n miljoun stuks verkocht. Mit n rollende pioano en Domino dij ''wah-wah''-geluden zingt tegen n staarke backbeat, wordt ''The Fat Man'' in t algemain zain as eerste rock-and-roll-ploat dij in zukse aantallen verkocht is. In 2015 is t nummer opnomen in de ''Grammy Hall of Fame''.
+Domino kreeg in 1949 n kontrakt bie [[Imperial Records]]. Hai kreeg royalties betoald op boases van verkopen in stee van n honoroarium veur elk laid. Mit producer [[Dave Bartholomew]] schreef hai ''The Fat Man'', n òfgezwakte versie van n laid over drugsversloafden, de ''Junkers Blues''; van dizze ploats wazzen in 1951 n miljoun stuks verkocht. Mit n rollende pioano en Domino dij ''wah-wah''-geluden zingt tegen n staarke backbeat, wordt ''The Fat Man'' in t algemain zain as eerste rock-and-roll-ploat dij in zukse aantallen verkocht is. In 2015 is t nummer opnomen in de ''Grammy Hall of Fame''.
 
 Mit ''Ain't That a Shame'' kwam Domino in 1955 veur t eerst in de hitliesten in de mainstream popmeziek. t Nummer kwam op 14 binnen in de ''Billboard Hot 100'' en hoalde n Top 10-ploats as hoogste noteren. Oetìndelk het hai 37 singles in de top 40 had, mor gainent doarvan op nummer 1.
 
@@ -30,7 +30,7 @@ Tussen 1956 en 1959 volgde nog n riege hitsingles in de ''Billboard Hot 100'', w
 Begun 1963 wer Imperial Records verkocht. Dou vertrok Domino bie de moatschoppij woar hai 60 singles veur opnam. Mit 40 Imperial-songs kwam hai in de top 10 van de ''Billboard'' R&B-hitliest en mit 11 nummers in de top 10 van de Pop-liest.
 
 === Noa t vertrek bie Imperial (1963-joaren 1970) ===
-In 1963 ging Domino noar ABC-Paramount Records, dij bepoalden dat hai zien ploaten opnam in Nashville, Tennesse in stee van New Orleans. Hai kreeg n nije producer (Felton Jarvis) n nije arrangeur (Bill Justis) touwezen. Domino's laangdurege soamenwaarken mit Dave Bartholomew, dij touzag op sikkom aal zien Imperial-hits, leek op zien ìnd. Jarvis and Justis veraanderden wat aan t Domino-geluud, benoam deur ondersteunen van countrypolitan-achtege koren aan de mainste opnoames tou te vougen. Elf singles werren oetbrocht veur ABC-Paramount, woarvan verschaaiden in de Top 100 kwamen, mor bloots ''Red Sails in the Sunset'' in 1963 de Top 40 hoalden. Mit de Britse invoasie in de popmeziek in 1964 veraanderde de smoak van t pebliek en was Domino zien sukses in d'hitliesten veurbie.
+In 1963 ging Domino noar [[ABC-Paramount Records]], dij bepoalden dat hai zien ploaten opnam in [[Nashville]], Tennesse in stee van New Orleans. Hai kreeg n nije producer (Felton Jarvis) n nije arrangeur (Bill Justis) touwezen. Domino's laangdurege soamenwaarken mit Dave Bartholomew, dij touzag op sikkom aal zien Imperial-hits, leek op zien ìnd. Jarvis and Justis veraanderden wat aan t Domino-geluud, benoam deur ondersteunen van countrypolitan-achtege koren aan de mainste opnoames tou te vougen. Elf singles werren oetbrocht veur ABC-Paramount, woarvan verschaaiden in de Top 100 kwamen, mor bloots ''Red Sails in the Sunset'' in 1963 de Top 40 hoalden. Mit de Britse invoasie in de popmeziek in 1964 veraanderde de smoak van t pebliek en was Domino zien sukses in d'hitliesten veurbie.
 
 Ondanks t oetblieven van dat sukses ging Domino stoadeg deur mit opnemen tot om en bie 1970. Haalfweg 1965 ging hai over van ABC-Paramount noar Mercury Records, woar hai n live-album en twij singles òfleverde. Der waren plannen veur t oetbrengen van n studio-album, mor dij binnen stoakt dou bloots vaaier nummers opnomen waren.
 
@@ -56,5 +56,6 @@ Fats Domino zien leste peblieke optreden was op 19 maai 2007, veur n oetverkocht
 * 2007 ''Delta Music Museum Hall of Fame'' 
 * 2015 t nummer ''The Fat Man'' in de ''Grammy Hall of Fame'' 
 * 2016 ''Rhythm and Blues Music Hall of Fame''
+
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Amerikoanse zanger]]
