--- a/Bosnië-Herzegovina.mw
+++ b/Bosnië-Herzegovina.mw
@@ -35,4 +35,4 @@ Bosnië-Herzegovina hef ne regearing met twee kamers en ne presideantskop met dr
 {{Dialekt|twd}}
 
 [[Kategorie:Laand]]
-[[Kategorie:Europa]]
+[[Kategorie:Bosnië-Herzegovina]]
