--- a/Kentucky.mw
+++ b/Kentucky.mw
@@ -46,5 +46,5 @@ Verwiezingen{{bron|<references/>}}
 
 {{Verenigde Staoten}}
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Verenigde staoten]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Verenigde Stoatn van Amerika]]
