--- a/Jaguar.mw
+++ b/Jaguar.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Jaguar_in_Pantanal_Brazil_1.jpg|thumb|right|300px|Nen jaguar in [[Pantanal]], [[Brazilië]]]]
-Den '''Jaguar''' ([[latien]]sen naam '''Panthera onca''') is ne grote [[katte]], ne [[felidae|feline]] in et geslacht van ''[[Panters]]''. Et is de ennigste inheemse pantersoorte van [[Amerika]]. De jaguar is de doardegrötste katte noa den [[tieger]] en de [[leeuw]]e, en de grötste van et Amerikaanse wearlddeel. Et leafgebeed van den jaguar strekt van et zuud-westen van de [[Verenigde Stoaten]], langs [[Mexiko]] en Middeln-Amerika töt et zuden van [[Paraguay]] en [[Argentinië]]. Behaalve ne kleane (vermeerderende) groep in de stoaten [[Arizona]] en [[Niej-Mexiko]], is den jaguar verjagd oet de Verenigde Stoaten.
+Den '''Jaguar''' ([[latien]]sen naam '''Panthera onca''') is ne grote [[katte]], ne [[felidae|feline]] in et geslacht van ''[[Panters]]''. Et is de ennigste inheemse pantersoorte van [[Amerika]]. De jaguar is de doardegrötste katte noa den [[tieger]] en de [[leeuw]]e, en de grötste van et Amerikaanse wearlddeel. Et leafgebeed van den jaguar strekt van et zuud-westen van de [[Verenigde Stoaten]], langs [[Mexico (laand)|Mexiko]] en Middeln-Amerika töt et zuden van [[Paraguay]] en [[Argentinië]]. Behaalve ne kleane (vermeerderende) groep in de stoaten [[Arizona]] en [[Niej-Mexiko]], is den jaguar verjagd oet de Verenigde Stoaten.
 
 Wat lief angeet lik den jaguar nog et meeste op een [[löjpeard]]. Toch is he wat grötter en stewiger, en wat leafgewoontes angeet lik he mear op den [[tieger]]. Den jaguar hef et leewste (sub-)tropies reagenwoold, mer hee redt zik ook in aandere soorten bos en zelfs in lös veeld. Net as den tieger dut den jaguar gearne zwemmen.
 
@@ -8,7 +8,7 @@ Den jaguar leawt vuural op zikzelf en vaank zinnen prooien duur ze heanig te ach
 Den jaguar kan bedreigd raken, want der zeent der alverdan meender van. Det keump duur verlees en opsplitsing van zin leafgebeed duur [[ontbossing]]. Internasjonalen haandel in jaguars of jaguarlidmoaten is verböaden, mer et deer wörd regelmoatig duur [[meanske]]n doodskötten, meestal tiedens anvoaringen met Zuud-Amerikaanse boeren. Et leafgebeed löp terugge, mer is toch nog wal oet estrekt. Vanweage zin grote leafgebeed is den jaguar nen vuuranstoanden anwezighead in de geleuwe van völle [[Indianen]], woeroonder de [[Maja]]'s en [[Azteken]].
 
 ==Naamofkomst==
-Et woard Jaguar keump oet de [[Toepi-guaranisproaken]], meest annemelik de [[Amazone|Amazoniese]] [[haandelssproake]] [[Nheengatu|Tupinambá]]. Et is met et [[Portugees]] met wierumme noar [[Europa]] kömmen. Et Toepiaanse woard ''yaguara'' wörd mangs as "beest" en mangs as "hoond" oawerzat. Et spesifieke woard vuur jaguar is ''yaguareté'', met et achterplaksel  -''eté'', wat "echt" or "woar" beduudt. 
+Et woard Jaguar keump oet de [[Toepi-guaranisproaken]], meest annemelik de [[Amazone|Amazoniese]] [[haandelssproake]] [[Nheengatu|Tupinambá]]. Et is met et [[Portugees]] met wierumme noar [[Europa (werelddeel)|Europa]] kömmen. Et Toepiaanse woard ''yaguara'' wörd mangs as "beest" en mangs as "hoond" oawerzat. Et spesifieke woard vuur jaguar is ''yaguareté'', met et achterplaksel  -''eté'', wat "echt" or "woar" beduudt. 
 
 Et eerste deel van zinne Latiense name, ''Panthera'', keump van et [[Grieks]]e woard vuur [[löjpeard]] πάνθηρ. Der wörd edacht at et eerste deel παν- (pan) "allens" beduudt en θήρ (ther) van θηρευτής keump en "reuwer" beduudt. Doarmet zol et dus "reuwer van alle deers" beduden. Dit kan ook best een volksoetleg wean. Et kan ook heel best van et [[Sanskriet]]e ''pundarikam'' kommen, wat "tieger" beduudt.
 
@@ -45,7 +45,7 @@ Köppelkes goat noa et bestiegen oet mekoar. De vröwkes zeent 93 - 105 deage dr
 Jongen wordt bleend geboren en kriegnt noa twee wekken zicht. Met dree moand zeent ze van de titte of, mer ze bliewt nog töt zes moand in et geboortehol, vuur at ze met öare moor hen jagen goat. Ze bliewt vuur een töt twee joar bie öare moor, vuur at ze der allene op oet goat um öar egene groond of te bakenen. Jonge männekes trekt eerst roond en vechtet regelmoatig met euldere männekes, töt ze et vuur mekoar kriegnt um een egen jachtgebeed op te eisen.
 
 In et weeld wordt ze 12 töt 15 joar oold en in gevangenskop töt 23 joar, woermet ze töt de langsleawende katten heurt.
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Dier]]
-[[Kategorie: Katte]]
-[[Kategorie: Zuud-Amerika]]
+
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Zoogdier]]
+[[Kategorie:Amerika]]
