linkfix, replaced: →  , [[Wikipedie:Algemene Nedersaksiese Schriefwieze|op de ANS-overzichtszied]] → [[Wikipedia:Algemene Nedersaksiese Schriefwieze|op de ANS-overzichtszied]] (2) using [[Project:AWB|AWB]]

--- a/Algemene_Nedersaksische_Schriefwieze.mw
+++ b/Algemene_Nedersaksische_Schriefwieze.mw
@@ -1,4 +1,4 @@
-De '''Algemene Nedersaksiese Schriefwieze''' (aofekort: '''ANS''') is in [[2011]] ontwikkeld deur de Nedersaksiese gemeenschap van [[Wikipedia]] en is bedoeld as [[Leegsaksische orthogroafie|spellingsveurschrift veur et hele Nedersaksiese taalgebied]] in Nederlaand. De [[SONT-spelling]] is hierbie as baosis gebruukt en van daoruut bin der verschillende wiezigingen in an-ebröcht. 
+De '''Algemene Nedersaksiese Schriefwieze''' (aofekort: '''ANS''') is in [[2011]] ontwikkeld deur de Nedersaksiese gemeenschap van [[Wikipedia]] en is bedoeld as [[Leegsaksische orthogroafie|spellingsveurschrift veur et hele Nedersaksiese taalgebied]] in Nederlaand. De [[SONT-spelling]] is hierbie as baosis gebruukt en van daoruut bin der verschillende wiezigingen in an-ebröcht.
 
 ==Uutgangspunten==
 De principes van leesbaorheid en bruukbaorheid vormen in disse spelling, net as in de [[SONT-spelling]], et uutgangspunt, hierbie mut der vanzelf wel op elet wörden dat et allemaole konsistent en konsekwent is. Die konsistensie en konsekwensie mag der vanzelf niet toe liejen da'j in et uterste terechtekoemen van een spelling, die zo nauw luustert naor de klanken as dat ze uutespreuken wörden. Een fonetiese spelling is niet allinnig meuilik leesbaor mer oek niet arg zinvol a'j een breed publiek bereiken willen. Et is allinnig zinvol veur utingen in de taalkunde waorbie klankverschillen an-egeven mutten wörden, mer daorveur ku'j mooi et naor sekure [[Internasjonaal Klaankenskrift|Internasionale Klankeschrift]] (IPA) gebruken. Daornaost hef disse spelling, in tegenstelling tot de SONT-spelling, as uutgangspunt um wat meer bie et Duuts-Nedersaksies an te sluten, en um zaken die in et Nederlaands verouwerd bin wat moederner en makkeliker te maken.
@@ -6,17 +6,17 @@ De principes van leesbaorheid en bruukbaorheid vormen in disse spelling, net as 
 ==Vereenvoudigingen==
 Eén van de vereenvoudigingen is et schrieven van de uutgang -lijk as ''-lik''. Hier is veur ekeuzen umdat -lijk niet overenekömp mit de uutspraak, en umdat ''-lik'' een histories ezien juustere weergave is; vergeliek mit et [[Oldsaksisch|Oudsaksiese]] ''-līk'' en et [[Middelnederduuts]]e ''-li{{small()|c}}k / -ly{{small()|c}}k''. Schriefwiezes as -lek en -luk zollen té foneties wörden. De schriefwieze -lik slöt oek beter an bie de aandere Germaanse talen (vergeliek: -lich, -lik, -lig, -ligur/-legur en -ly).
 
-Oek is de uutgang -isch vereenvoudigd naor -ies, hier is veur ekeuzen umdat et al sinds eeuwen zo uutespreuken wördt. Et kömp van de [[Oergermaans]]e en [[Oldsaksisch|Oudsaksiese]] uutgang -isk, die in et [[Hoogduuts]] -isch (-isj) is ewörden, en via et [[Hoogduuts]] in de schrieftaal van et [[Middelnederlaands]], [[Middelnedersaksies]] en de aandere Nederlaandse streektalen terechtekeumen is. 
+Oek is de uutgang -isch vereenvoudigd naor -ies, hier is veur ekeuzen umdat et al sinds eeuwen zo uutespreuken wördt. Et kömp van de [[Oergermaans]]e en [[Oldsaksisch|Oudsaksiese]] uutgang -isk, die in et [[Hoogduuts]] -isch (-isj) is ewörden, en via et [[Hoogduuts]] in de schrieftaal van et [[Middelnederlaands]], [[Middelnedersaksies]] en de aandere Nederlaandse streektalen terechtekeumen is.
 
 Um an te sluten bie et Platduuts (et Nedersaksies van Duutslaand) is derveur ekeuzen um de letter c te schrieven as <k>, as de uutsprake mit een /k/ is, en et blif <c> as et een /s/-klank hef. Een Uutzundering is bie et gebruuk van uutheemse woorden waorvan nog dudelik te heuren/zien is dat et een butenlaands woord is. Bieveurbeeld: et Italiaanse woord ''cappuccino'', mer et woord ''computer'' is dusdaonig in-eburgerd in de taal dat et as ''komputer'' eschreven wördt. Een ander geval is nao een <k>, bv. in woorden as ''aksent'' en ''aksepteren''.
 
 In et Nedersaksies wörden lidwoorden vake aofekort eschreven, dit wördt vake mit een aofkappingsteken (') edaon, mer deurda'j zo een onrustig beeld kriegen is derveur ekeuzen um et daor vort te laoten, of et woord voluut te schrieven. Et aofkappingsteken wördt wel gebruukt in woorden as ''zo'n'' en ''programma's''.
 
 ==Belangriekste punten==
-Veur een groot deel kömp et overene mit de SONT-spelling en hef nog wat elementen uut de aandere Nedersaksiese spellingssystemen overeneumen, en as bepaolde punten niet aanders vastesteld bin, dan geldt de Nederlaandse spelling. De Algemene Nedersaksiese Schriefwieze maakt, zo as de SONT-spelling oek veurzichtig angif, een onderscheid tussen de ao (deur de SONT umschreven as een heldere vokaal, en klinkt as: {{IPA|[ɔː]}} of {{IPA|[ɒː]}}) en oa (deur de SONT umschreven as een donkere vokaal, en klinkt as: {{IPA|[ʊː]}} of {{IPA|[oː]}}). In et Twents wördt der wel <oa> eschreven, hoewel der een heldere vokaal bedoeld wördt, dit vanwegen de lange spellingstradisie dervan. Oek in woorden die in et Oudsaksies een o/u hadden wördt <oa> gebruukt, en <ao> in woorden waor et Oudsaksiese a/e had, zo krie'j bv. ''jaor'' (NL: jaar) en ''baos'' (NL: baas) versus ''oaver'' (NL: over) en ''boaven'' (NL: boven).  De <ae> steet veur een langerekten è-klank ({{IPA|[ɛː]}}) ontstaon uut a/aa, de <ea> uut e/ee. De ää is op-eneumen in de schriefwieze en is een klank die tussen de <aa> en <ae> in ligt (klinkt as: {{IPA|[æː]}}). Kiek op [[Wikipedie:Algemene Nedersaksiese Schriefwieze|op de ANS-overzichtszied]] veur een overzicht van alle letterkombinasies en de uutspraak dervan.
+Veur een groot deel kömp et overene mit de SONT-spelling en hef nog wat elementen uut de aandere Nedersaksiese spellingssystemen overeneumen, en as bepaolde punten niet aanders vastesteld bin, dan geldt de Nederlaandse spelling. De Algemene Nedersaksiese Schriefwieze maakt, zo as de SONT-spelling oek veurzichtig angif, een onderscheid tussen de ao (deur de SONT umschreven as een heldere vokaal, en klinkt as: {{IPA|[ɔː]}} of {{IPA|[ɒː]}}) en oa (deur de SONT umschreven as een donkere vokaal, en klinkt as: {{IPA|[ʊː]}} of {{IPA|[oː]}}). In et Twents wördt der wel <oa> eschreven, hoewel der een heldere vokaal bedoeld wördt, dit vanwegen de lange spellingstradisie dervan. Oek in woorden die in et Oudsaksies een o/u hadden wördt <oa> gebruukt, en <ao> in woorden waor et Oudsaksiese a/e had, zo krie'j bv. ''jaor'' (NL: jaar) en ''baos'' (NL: baas) versus ''oaver'' (NL: over) en ''boaven'' (NL: boven).  De <ae> steet veur een langerekten è-klank ({{IPA|[ɛː]}}) ontstaon uut a/aa, de <ea> uut e/ee. De ää is op-eneumen in de schriefwieze en is een klank die tussen de <aa> en <ae> in ligt (klinkt as: {{IPA|[æː]}}). Kiek op [[Wikipedia:Algemene Nedersaksiese Schriefwieze|op de ANS-overzichtszied]] veur een overzicht van alle letterkombinasies en de uutspraak dervan.
 
 ==Zie oek==
-*[[Wikipedie:Algemene Nedersaksiese Schriefwieze]]
+*[[Wikipedia:Algemene Nedersaksiese Schriefwieze]]
 
-[[Kategorie:West-Veluws artikel]]
+[[Kategorie:West-Veluws artikel]]
 [[Kategorie:Nedersaksiese spellingsrichliene]]
