--- a/Eerste_Germaanse_klaankverskoeving.mw
+++ b/Eerste_Germaanse_klaankverskoeving.mw
@@ -87,8 +87,8 @@ n Klassiek veurbield van PIE *t > PGm *d is t woord veur 'vader'. Proto-Indo-Eur
 == Zie ok ==
 * [[Twiede Germaanse klaankverskoeving]]
 
-{{Dia|Dit artikel is skreven in de [[Wikipedie:Algemene Nedersaksiese Schriefwieze|Algemiene Nedersaksiese Skriefwieze]]}}
-{{DEFAULTSORT:Germaanse Klaankverskoeving 1}}
+{{Dia|Dit artikel is skreven in de [[Wikipedia:Algemene Nedersaksiese Schriefwieze|Algemiene Nedersaksiese Skriefwieze]]}}
 
-[[Kategorie:Stellingwarfs_artikel]]
+{{DEFAULTSORT:Germaanse Klaankverskoeving 1}}
+[[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Sproakleer]]
