linkfix, replaced: [[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]] → [[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]] (15) using [[Project:AWB|AWB]]

--- a/Klankleer_van_t_Nedersaksies.mw
+++ b/Klankleer_van_t_Nedersaksies.mw
@@ -9,10 +9,10 @@ Oaverzicht van klanken in t Nedersaksies en eure skriefwiezen, volgens:
 
 == Klinkers ==
 
-t Oldsaksies hef vief klinkers ehad: a, e, i, o, oe, dee't in korten en langen vorm bestonden. Wieters gaf et nog dree diftongen (tweeklanken): ai, au, eu. Oet disse vörme en de umluudvörme dervan bunt de moderne vörme ontstaon. 
+t Oldsaksies hef vief klinkers ehad: a, e, i, o, oe, dee't in korten en langen vorm bestonden. Wieters gaf et nog dree diftongen (tweeklanken): ai, au, eu. Oet disse vörme en de umluudvörme dervan bunt de moderne vörme ontstaon.
 
 ===Lang en kort===
-Aanders as et Nederlaands hef t Nedersaksies echte lange klinkers. Denk an et verskil tussen wies en fie:n, moes en doe:ve. Lange klinkers bestoat in et Nederlaands allenig in leenwoorden as freule of zone, maor in t Nedersaksies komt ze in de normale woorden veur: näolen, gaon. 
+Aanders as et Nederlaands hef t Nedersaksies echte lange klinkers. Denk an et verskil tussen wies en fie:n, moes en doe:ve. Lange klinkers bestoat in et Nederlaands allenig in leenwoorden as freule of zone, maor in t Nedersaksies komt ze in de normale woorden veur: näolen, gaon.
 
 ===Espand en neet espand===
 Dat wat in et Nederlaands wal es lange klinkers eneumd wöd, bunt gin langere klinkers maor espande klinkers. Een veurbeeld is et woord hook. Dat is neet de lange variant van hok (want dat is haok), maor de espande variant dervan. Et verskil in nen '''espanden klinker''' (hook) en nen '''neet espanden klinker''' (hok) zit m neet zozeer in de lengte, maor in ho hard de klaankvormers (artikulatoren, zeg maor lippen, tonge, stembaanden ezw) an espand wordt.  Umdat neet espande klinkers (haost) allenig in eslotten lettergrepen (Platduuts: slaten sülv) veurkomt, wordt ze ok wal '''of edekte klinkers''' eneumd, teggenovver '''neet of edekte klinkers''' (apen sülv).
@@ -32,7 +32,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Eenklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -122,7 +122,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Tweeklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -189,7 +189,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Eenklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -239,7 +239,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 |ee
 |
 |ee
-|ee (({{Audio luuster|Zee_(twd).ogg}})
+|ee ({{Audio luuster|Zee_(twd).ogg}})
 |ee ({{Audio luuster|Zee_(vel).ogg}})
 |-
 |espand, klaankbrökke: Breef (twd)
@@ -254,7 +254,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Tweeklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -312,7 +312,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Eenklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -379,7 +379,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -420,7 +420,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Eenklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -461,7 +461,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 |
 |ö ({{Audio luuster|Körtbie Hambörg.ogg}})
 |
-|öa, ùe (({{Audio luuster|Stöarig Höare_(twd).ogg}})
+|öa, ùe ({{Audio luuster|Stöarig Höare_(twd).ogg}})
 |öö ({{Audio luuster|Jöör, dröögien (sdz).ogg}})
 |- 
 |Espand, kort. "bon" (fr) [[Internasjonaal Klaankenskrift|IPA]]:{{IPA|[ɔ]}}
@@ -541,7 +541,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Tweeklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -635,7 +635,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Eenklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -701,7 +701,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 ====Tweeklaanken====
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -740,7 +740,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 === ei-vörme (altied tweeklaank) ===
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -761,7 +761,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 === ui-vörme (altied tweeklaank) ===
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -782,7 +782,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 === au-vörme (altied tweeklaank)===
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -803,7 +803,7 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 === Sjwa ===
 {| class="wikitable"
 !Vorm
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
@@ -819,14 +819,13 @@ De dree vörme lang/kort, espand/neet espand en umluud/gin umluud kö'j kombiner
 |e (de), i (aordig, dudelik)
 |e (de), i (oarig, dudelik)
 |e (de), i (aorig), ij (dudelijk) ({{Audio luuster|Aorig_dudelik_(vel).ogg}})
-|} 
-
+|}
 
 ==Metklinkers==
 
 {| class="wikitable" 
 !Umskrieving van den klank
-![[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]
+![[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]
 !ACT
 !DRT
 !GOS
