/* Verschaaidene spèlsysteems */linkfix, replaced: [http://www.stellingwarfs.nl] →  [http://www.stellingwarfs.nl/], [[Wikipedie:Algemene Nedersaksiese Schriefwieze|Algemene Nedersaksiese Schriefwieze]] →... using [[Project:AWB|AWB]]

--- a/Leegsaksische_orthogroafie.mw
+++ b/Leegsaksische_orthogroafie.mw
@@ -16,7 +16,7 @@ Nou dat de toal offisjeel as apaarte toal eerkend is, denken meer en meer mìnsk
 |-
 | [[Vosbergenschriefwiese|(Eversloo-)Vosbergenschriefwiese]] || [[Nederlaands Leegsaksisch]],<br/>[[West Leegsaksisch (algemain)|West-Leegsaksisch]] in Duutslaand || 1955 ||  || ainhaidsspèllen over de grens
 |-
-| [[Wikipedie:Algemene Nedersaksiese Schriefwieze|Algemene Nedersaksiese Schriefwieze]] || [[Nederlaands Leegsaksisch]] || 2011 || [http://nds-nl.wikipedia.org/Wikipedie:Algemene_Nedersaksiese_Schriefwieze] || baseerd op de SONT-spèllen mit wat aanpazzens en aanvullens
+| [[Wikipedia:Algemene Nedersaksiese Schriefwieze|Algemene Nedersaksiese Schriefwieze]] || [[Nederlaands Leegsaksisch]] || 2011 || [http://nds-nl.wikipedia.org/Wikipedie:Algemene_Nedersaksiese_Schriefwieze] || baseerd op de SONT-spèllen mit wat aanpazzens en aanvullens
 |-
 | [[Algemeyne Schryvwys']] || [[Nedersaksisch|Leegsaksisch]] ||  || [http://lowlands-l.net/grammar-new/] || ainhaidsspèllen veur t haile Leegsaksisch, môr inkompleet
 |-
@@ -34,7 +34,7 @@ Nou dat de toal offisjeel as apaarte toal eerkend is, denken meer en meer mìnsk
 |-
 | [[Standaard skriefwieze|Standaard Schriefwieze]] || [[Tweants|Twìnts]] ||  || [http://members.home.nl/goaitsen/twents/Spelling.rtf] || wieder of van t Nederlaands
 |-
-| [[Stellingwarver spelling]] || [[Stellingwarfs]] || 1976 || [http://www.stellingwarfs.nl] || 
+| [[Stellingwarver spelling]] || [[Stellingwarfs]] || 1976 || [http://www.stellingwarfs.nl/] || 
 |-
 | [[Urker spelling]] || [[Urkers]] || || [https://www.documentatiecentrumurk.nl/zoeken?keyword=schrijfwijzer#schrijfwijzer] || 
 |-
